--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,10 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="a5b8a8">  <td>23/01/31 18:19:54</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;BaseTest.setUp()[pri:0, instance:testCases.ContactForm@3c7f66c4]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1183231938</td>   <td></td> </tr>
-<tr bgcolor="a5b8a8">  <td>23/01/31 18:20:06</td>   <td>11700</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.setUp()[pri:0, instance:testCases.ContactForm@3c7f66c4]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@1183231938</td>   <td></td> </tr>
-<tr bgcolor="828672">  <td>23/01/31 18:20:17</td>   <td>23474</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ContactForm.contactUs(java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:testCases.ContactForm@3c7f66c4]">contactUs</td> 
-  <td>main@1183231938</td>   <td></td> </tr>
+<tr bgcolor="a5b8a8">  <td>23/02/06 17:09:15</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;BaseTest.setUp()[pri:0, instance:testCases.ContactForm@5b03b9fe]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2067180044</td>   <td></td> </tr>
+<tr bgcolor="828672">  <td>23/02/06 17:09:26</td>   <td>10358</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ContactForm.contactUs()[pri:0, instance:testCases.ContactForm@5b03b9fe]">contactUs</td> 
+  <td>main@2067180044</td>   <td></td> </tr>
+<tr bgcolor="a5b8a8">  <td>23/02/06 17:09:30</td>   <td>14299</td> <td>&nbsp;</td><td title="&lt;&lt;BaseTest.driverClose()[pri:0, instance:testCases.ContactForm@5b03b9fe]">&lt;&lt;driverClose</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2067180044</td>   <td></td> </tr>
 </table>
